<resources>
    <string name="app_name">ChatOnLineDB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_app">Register</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="signIn">SignIn</string>
    <string name="password">Password</string>
</resources>